Adicionado documento icp brasil

--- a/teste/teste.csproj
+++ b/teste/teste.csproj
@@ -94,6 +94,12 @@
     <None Include="Resources\Certificado DEMOLINER E CIA LTDA.p12">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="Resources\PA_AD_RB_v2_1.der">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\teste.pdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
